--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ top:500px        }
         
         <script>
         var typed = new Typed (".auto-type", {
-        strings: ["am greatful","would love to work with IBM"],
+        strings: ["am grateful","would love to work with IBM"],
         typeSpeed: 200,
         backSpeed: 200,
         loop: true
