--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ top:500px        }
         loop: true
         })
         </script>
-        <h3>It was a good time discussing with you, espcially your expreience with gulf of mexico oil spill intrigued me a lot</h3>
+        <h3>It was a good time discussing with you, especially your experience with the Gulf of Mexico Oil Spill intrigued me a lot!</h3>
 	
 </body>
 </html>
